--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-        <script type="module" src="js/app.js"></script>
+        <script src="js/app.js"></script>
 
     </body>
 </html>
